<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textViewFormHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:text="@string/profile_form_header"
        android:textColor="@color/navy_blue"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/form_hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_black" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/form_hint_username"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_black" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/form_hint_first_name"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_black" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/form_hint_last_name"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_black" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/form_hint_age"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint_black" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="wrap_content"
        android:textColor="@color/error"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSaveInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/navy_blue"
        android:text="@string/form_confirm_button"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnClearInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/error"
        android:text="@string/form_clear_button"
        android:textColor="@color/white" />

</LinearLayout>
